# go-leetcode

./: .dockerignore  .gitignore  add-submission-button-plan.md  combined.txt  fly.toml  get_all_files.py  readme.md  spaced-repetition-flashcards-plan.md
server/: .dockerignore  API-DOCUMENTATION.md  CLAUDE.md  Dockerfile  LeetCode Practice API.postman_collection.json  README.md  create_problems_topic_table.py  generate_solution_approaches.py  go.mod  go.sum  insert_solutions.py  leetcode_sync.py  main.go  pyproject.toml  scrape-problems.py
server/.github/workflows/: ci-cd.yml
server/api/handlers/: auth_status.go  deck.go  flashcard.go  health.go  health_test.go  problem.go  problem_status.go  problem_test.go  proxy.go  review.go  review_test.go  solution.go  solution_test.go  submission.go  submission_test.go  user.go  user_test.go
server/api/middleware/: auth.go  context_utils.go  cors.go  logging.go
server/api/routes/: routes.go
server/internal/authutils/: jwt.go
server/internal/database/: db_test.go  (+1 more)
server/migrations/: 0000003_problems.up.sql  000001_init.up.sql  000002_review.up.sql  000003_problems.up.sql  000004_problem_solutions.down.sql  000004_problem_solutions.up.sql  20250405034941_first_commit.sql  20250405034941_first_commit.up.sql  20250405040709_rls_policy.up.sql  seed_problems_topic.sql  seed_solutions.sql  seed_test_problems.sql
server/models/: deck.go  flashcard_review.go  problems.go  problems_test.go  review_log.go  review_schedule.go  review_schedule_test.go  solution.go  submission.go  submission_test.go  user.go  user_test.go
(+90 files in other folders)
