[tool.poetry]
name = "python-scrape-leetcode"
version = "0.1.0"
description = ""
authors = ["juliusalberto <u7724204@anu.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
